version/stable/_sources/api/ansys/mechanical/stubs/v252/Ansys/ACT/Automation/Mechanical/FE/CommandRepository.rst.txt
.. vale off



:class:`CommandRepository`
==========================

.. py:class:: ansys.mechanical.stubs.v252.Ansys.ACT.Automation.Mechanical.FE.CommandRepository(iCommandRepository: Ansys.Common.Interop.FECommandsModel.ICommandRepository)

   Bases: :py:obj:`object`


   
   Command repository.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: CommandRepository

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Equals`
            - Equals method.
          * - :py:attr:`~GetCommandByIndex`
            - Gets the commands by index.
          * - :py:attr:`~GetCommandName`
            - Gets the name of commands of a type specified by params eCommandsType and index in the repository.
          * - :py:attr:`~GetCommandNames`
            - Gets the command names of a type specified by params eCommandsType and index in the repository.
          * - :py:attr:`~GetCommandNamesCount`
            - Gets the number of commands of a type specified by param=eCommandsType in the repository.
          * - :py:attr:`~GetCommandsByName`
            - Gets the commands by name.
          * - :py:attr:`~GetHashCode`
            - GetHashCode method.
          * - :py:attr:`~GetType`
            - GetType method.
          * - :py:attr:`~ToString`
            - ToString method.












Method detail
-------------
.. py:method:: Equals(obj: Any) -> bool

   
   Equals method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetCommandByIndex(index: int) -> Ansys.Common.Interop.FECommandsModel.ICommand

   
   Gets the commands by index.

   ..
       !! processed by numpydoc !!

.. py:method:: GetCommandName(eCommandsType: Ansys.ACT.Automation.Mechanical.FE.CommandsType, index: int) -> str

   
   Gets the name of commands of a type specified by params eCommandsType and index in the repository.

   ..
       !! processed by numpydoc !!

.. py:method:: GetCommandNames(eCommandsType: Ansys.ACT.Automation.Mechanical.FE.CommandsType) -> tuple[str]

   
   Gets the command names of a type specified by params eCommandsType and index in the repository.

   ..
       !! processed by numpydoc !!

.. py:method:: GetCommandNamesCount(eCommandsType: Ansys.ACT.Automation.Mechanical.FE.CommandsType) -> int

   
   Gets the number of commands of a type specified by param=eCommandsType in the repository.

   ..
       !! processed by numpydoc !!

.. py:method:: GetCommandsByName(name: str) -> Ansys.ACT.Automation.Mechanical.FE.CommandColl

   
   Gets the commands by name.

   ..
       !! processed by numpydoc !!

.. py:method:: GetHashCode() -> int

   
   GetHashCode method.

   ..
       !! processed by numpydoc !!

.. py:method:: GetType() -> type

   
   GetType method.

   ..
       !! processed by numpydoc !!

.. py:method:: ToString() -> str

   
   ToString method.

   ..
       !! processed by numpydoc !!



.. vale on